--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -1,26 +1,26 @@
 * Motivation
 * Private key systemer
 	* One Time Pad
-		* Sikkerhed for One Time Pad
-			* Bruteforce
-	* Sikkerhed I secret-key
-		* Samme key flere gange
+		* *Sikkerhed for One Time Pad*
+			* *Bruteforce*
+	* Sikkerhed *I secret-key*
+		* *Samme key flere gange*
 		* *NONCE*
-		* Cost of attack
+		* *Cost of attack*
 	* Ciphers
 		* Stream ciphers
 		* Block Ciphers
-	* Pro / Con
-		* Hastighed og Nøgler
+	* *Pro / Con*
+		* *Hastighed og Nøgler*
 * Public key systemer
 	* Sikkerhed
-		* Tilfældighed
-		* Key længde
+		* *Tilfældighed*
+		* *Key længde*
 	* RSA
-		* Nøgler
-		* (De)Kryptering
-		* OAEP
-			* Public key til secrete key
+		* *Nøgler*
+		* *(De)Kryptering*
+		* *OAEP*
+			* *Public key til secrete key*
 
 
 # Confidentiality
