--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -2,14 +2,14 @@
 * Tabel løsning - ubetinget sikkerhed
 * Beregningstungt sikkerhed
 	* Secret key
-		* Algoritmer
-		* Sikkerhed, key længde
+		* *Algoritmer*
+		* *Sikkerhed, key længde*
 		* Eksempel: CBC-MAC
 	* Public Key
-		* Algoritmer
-		* Sikkerhed, Key Længde
-		* Fordele ved public-key
-		* RSA Implementering
+		* *Algoritmer*
+		* *Sikkerhed, Key Længde*
+		* Fordele
+		* RSA
 			* Problem
 	* Hashfunktioner
 	* RSA & Hash
@@ -102,8 +102,8 @@ Man kan da signere en besked med sin private nøgle, og andre kan tjekke den er 
 Der er tre algoritme:
 
 > * `G = (vk, sk)` laver to nøgler
-> * `SIGNsk(m) = c` laver en signatur for _m_ under nøglen _sk_
-> * `Vpk(m, c) = true/false` verificere signaturen for beskeden
+> * `SIGNsk(m) = s` laver en signatur for _m_ under nøglen _sk_
+> * `Vvk(m, c) = true/false` verificere signaturen for beskeden
 
 #### Sikkerhed, Key Længde
 
@@ -117,7 +117,7 @@ Der **findes algoritmer** der kan udregne en secrete key ud fra en public key, d
 
 Når man bruger en MAC, kan B ved modtagelse af m fra A; se om den **virkelig var fra A** (givet at kun A og B kender MAC); men **B kan ikke bevise** for nogle andre at det var A der sende beskeden, den kunne ligeså godt have været generet af B.
 
-Her er formålet ved at bruge **public key systemet**; for **alle kan have A's pk**; men da kun A har SKa; er det kun A der kan signere en besked m. Så sender A en signeret besked til B, kan C der har SKa verificere at A lavede m og ikke B, selvom det er B som nu er i besidelse af den.
+Her er formålet ved at bruge **public key systemet**; for **alle kan have A's pk**; men da kun A har SKa; er det kun A der kan signere en besked m. Så sender A en signeret besked til B, kan C der har VKa verificere at A lavede m og ikke B, selvom det er B som nu er i besidelse af den.
 
 #### RSA Implementering
 
