--- a/Dispositioner/3. Key Management and infrastructure.md
+++ b/Dispositioner/3. Key Management and infrastructure.md
@@ -1,6 +1,6 @@
 * Motivation
 * Session Keys
-	* Long term key
+	* *Long term key*
 * Key Distribution Centers
 	* Eksempel
 	* Problemer
@@ -8,16 +8,16 @@
 	* Registrering
 	* Sikkerhed
 * Certificate Chains
-	* Eksempel, untrusted CA
+	* Eksempel
 * Tilkendegivelse
 	* Kodeord
 		* Sikkerhed: kvalitet og server
 	* Hardware
-		* Tamper Evident
-			* Two Factor Authentication
-		* Tamper Resident
+		* *Tamper Evident*
+			* *Two Factor Authentication*
+		* *Tamper Resident*
 	* Biometrics
-		* Buffer til forandring
+		* *Buffer til forandring*
 
 # Key Management and infrastructure
 
