--- a/Dispositioner/4. Network Security Mechanisms.md
+++ b/Dispositioner/4. Network Security Mechanisms.md
@@ -24,7 +24,7 @@ Det kan **løses** ved at kommunikere igennem "**sikre tunneler**" over internet
 
 Hvis vi gerne vil have en sikker kommunikation, bruger vi en protokol kaldet **autentificeret nøgle udveksling**.
 
-Ideen er at, at to parter der har hinandens certifikater og ved hjælp af dem, **ønsker at blive enige om en session key**.
+Ideen er at, at to parter har hinandens certifikater og ved hjælp af dem, **ønsker at blive enige om en session key**.
 
 En session key, er en midlertidig key man bruger til kommunikation. Det har følgende fordele:
 
