--- a/Dispositioner/8. Synchronous Agreement.md
+++ b/Dispositioner/8. Synchronous Agreement.md
@@ -25,7 +25,7 @@ I min dag til dag tilværelse, betyder det ikke meget; men for en computer kan d
 
 Specielt når vi tænker på rumskibe, fly, sundhedsvæsnet osv.
 
-Det er vigtigt at vi har ure vi kan regne med; og hvis vi har det - så kan vi lave nogle ret interresante ting.
+Det er vigtigt at vi har ure vi kan regne med; og hvis vi har det - så kan vi lave nogle ret interessante ting.
 
 ## Round Based protocols
 
