--- a/Dispositioner/9. Asynchonous Agreenment.md
+++ b/Dispositioner/9. Asynchonous Agreenment.md
@@ -60,10 +60,10 @@ For enhver asynkron protokol gælder følgende:
 
 #### Egenskaber
 
-> * **Validity 1**: Hvis en korrekt P outputter, og B er korrekt, har B sendt outputtet
-> * **Agreement**: Alle korrekte outputter det samme
-> * **Validity 2**: Hvis B er korrekt og får input m, vil alle korrekte outputte m
-> * **Propagation** (flooding): Hvis en korrekt P outputter m, vil alle korrekte outputtet m
+> * **Validity 1**: Hvis en korrekt Pi levere, og B er korrekt, blev B bedt om det
+> * **Agreement**: Alle korrekte levere det samme
+> * **Validity 2**: Hvis B er korrekt og får input m, vil alle korrekte Pi levere m
+> * **Propagation** (flooding): Hvis en korrekt P levere m, vil alle korrekte levere m
 
 ### Bracha Broadcast
 
@@ -89,7 +89,7 @@ Når en broadcaster B flooder med en besked M, er ideen at:
 
 * m broadcastes
 * Alle ærlige parter sender EKKO til alle
-* Alle ærlige parter får n > 3t EKKO og sender et KLAR
+* Alle ærlige parter får n - t EKKO og sender et KLAR
 * Alle ærlige parter får KLAR og udskriver
 
 **Validity 1**:
@@ -103,19 +103,19 @@ Vi starter med at kigge på, hvordan det kan ske, at en korrekt P har outputtet.
 
 * P har modtaget KLAR fra n - t parter, hvilket er minimum 2t + 1
 * t kan være korrupte; så de t + 1 har også sendt en klarmelding til alle andre
-* Så alle ærlige parter modtager minimum t + 1 KLAR; hvorfor alle outputter m.
+* Så alle ærlige parter modtager minimum t + 1 KLAR; hvorfor alle levere m.
 
 **Agreement**:
 
-Vi bruger lidt af samme logik som før, og kigger på hvad der skal til for at en Pi vil outputte en m.
+Vi bruger lidt af samme logik som før, og kigger på hvad der skal til for at en Pi vil levere en m.
 
 > * t onde
 > * 3t + 1 ærlige
 
 * Pi har modtaget KLAR fra 2t + 1 parter
-* t kan være korrupte; så t + 1 ærlige sendte KLAR til Pi
-* En Pj der outputter, vil derfor også have modtaget klarmelding fra t + 1 parter
-* Vi ved ikke hvilke parter der er onde; så minimum 1 ærlig part har sendt samme m til begge, hvorfor de outputter det samme.
+* T kan være korrupte; så t + 1 ærlige sendte KLAR til Pi
+* En Pj der levere, vil derfor også have modtaget klarmelding fra t + 1 parter
+* Vi ved ikke hvilke parter der er onde; så minimum 1 ærlig part har sendt samme m til begge, hvorfor de levere det samme.
 
 ## Asyncronous Byzantine Agreement[^Egenskaber udenladt, se /noter/readme.md]
 
