--- a/Dispositioner/11. Blockchain, Growing a tree.md
+++ b/Dispositioner/11. Blockchain, Growing a tree.md
@@ -58,7 +58,7 @@ Vi har et peer-to-peer network, hvor beskeder bliver sendt rundt ved flooding.
 
 Vi tillader at nodes bare kan komme og gå; hvorfor vi ikke bare kan lade en lederrolle gå på skift; eftersom en langsomtids bruger måske aldrig bliver valgt.
 
-> * Sequeencer går på skifter
+> * leder ved lotteri
 
 Derimod bruger vi et lotteri til at bestemme sequencer. Man **kan vinde i en** række forskellige slot-numre, eller **puljer** kan vi kalde dem, der hver i sær varer et hvis stykke tid. 
 
@@ -70,7 +70,7 @@ Så det her er jo basicly hvad det er vi sad og programmerede og svedte over i d
 
 #### Vinde puljen
 
-Efterhånden som tiden går, vil man være i en pulje **angivet af et nummer**. Hvis  men vil vinde puljen, så gøres det ved at:
+Efterhånden som tiden går, vil man være i en pulje **angivet af et nummer**. Hvis man vil vinde puljen, så gøres det ved at:
 
 > * **Vinde pulje**
 > * Signere pulje-nummet
@@ -141,7 +141,7 @@ Det smarte ved det her system, er at **kun parten der kender sin secrete-key kan
 
 Derfor kan **andre ikke vide hvem der har vundet** - indtil at man selv vælger at offentliggøre det. Dermed er systemet, designet til at **modstå et DoS angreb**; hvor en fremmed - vil forsøge at **crashe en vinder**.
 
-For sæt nu at en fremmed kunne udregne alle vindere af systemet, så kunne han fokusere på at crashe alle disse - hvorfor han ville dræbe liveness af systemet.
+For sæt nu at en fremmed kunne udregne alle vindere af systemet, så kunne han fokusere på at crashe alle disse - hvorfor han ville dræbe **liveness af systemet**.
 
 Det bringer os tilbage til at **snakke om det her Seed** der først bliver offenligt i anden runde. Det er vigtigt at det først kommer efter, at hver part har lavet sine nøgler; for ellers ville en part kunne **lave en nøgle**, der med alt sandsynlighed **gav høje lodtrækninger** i nogle ønskede runder.
 
@@ -187,3 +187,5 @@ Sæt nu; at vi har, at nogle fremmede havde vundet nogle runder; men ikke havde 
 Man kan f.eks bekæmpe dette, med at angive hvor langt et rollback maksimalt må være; men dette kan ligeledes også give problemer. 
 
 For sæt nu at tre parter har tre blade og til roden, og en fjerde part lige havde vundet - så den havde fire blade der op. Så kunne et ghost tree på 5 blive sat op på roden; og hvis max-rollback er tre; vil de tre kunne gå på ghost-vejen, men aldrig den fjerde. Hvorfor de nu er splittet og hvorfor der nu aldrig vil kunne komme agreement igen.
+
+Hvordan kan vi undgå det? Vi siger f.eks at en blok er **endelig** hvorfor vi ikke kan lave rollback bag den. 
