better explanation of rsa problem

--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -139,11 +139,13 @@ Der virker pga. Matematik-magi.
 
 ##### Problem
 
-Et problem er, at en **fremmed** kan bare **vælge et tal** og sige det er en **signatur** - og udføre venstre del af _v_ herpå, for at få en _m_.
+Et problem er, at en **fremmed** kan bare **vælge et tal** og sige det er en **signatur**.
+
+Så tager han f.eks A's Verification Key og udføre venstre del af _v_ herpå, for at få en _m_.
 
 > m = s^e % n
 
-Så kan den fremmede sende (m, s), det er dog muligt _m_ ikke betyder noget. Men det er stadig et problem.
+Så kan den fremmede sende (m, s), det er dog muligt _m_ ikke betyder noget. Men det er stadig et problem, at man kan lave en besked + signatur for en anden.
 
 > send (m, s)
 
