--- a/Dispositioner/8. Synchronous Agreement.md
+++ b/Dispositioner/8. Synchronous Agreement.md
@@ -105,6 +105,8 @@ Så nu når vi har runder på plads; så lad os **snakke om et problem**: The Sc
 
 > Pj ved Pi skal sende en besked klokken t; hvorefter Pj skal levere den
 
+Hvordan kan alle Pj så være enige?
+
 For en protokol til korrekt at udføre dette, skal alle ærlige parter køre protokollen i samme runde.
 
 ### Egenskaber
