print ready i guess

--- a/Dispositioner/9. Asynchonous Agreenment.md
+++ b/Dispositioner/9. Asynchonous Agreenment.md
@@ -116,6 +116,7 @@ Vi bruger lidt af samme logik som før, og kigger på hvad der skal til for at e
 * T kan være korrupte; så t + 1 ærlige sendte KLAR til Pi
 * En Pj der levere, vil derfor også have modtaget klarmelding fra t + 1 parter
 * Vi ved ikke hvilke parter der er onde; så minimum 1 ærlig part har sendt samme m til begge, hvorfor de levere det samme.
+* *Det er fordi, (t+1)+(t+1) > 2t+1*
 
 ## Asyncronous Byzantine Agreement[^Egenskaber udenladt, se /noter/readme.md]
 
