added Lower bound results, small delov strong correction

--- a/Dispositioner/8. Synchronous Agreement.md
+++ b/Dispositioner/8. Synchronous Agreement.md
@@ -12,6 +12,7 @@
 	* Ideen
 	* Protokollen
 		* Egenskaber
+* Lower bound results
 
 # Synchronous Agreement
 
@@ -159,7 +160,7 @@ Hver Pi holder nogle variabler:
 > * Pj modtager en _m_ og et sæt af signature _S_, hvor _Vj_ ikke indeholder _m_, så er _S_ valid hvis:
 >  * 1) Alle kan verificeres til _m_
 >  * 2) En er fra B
->  * 3) Antallet er _r ≤_ unikke; 
+>  * 3) Antallet er _r ≤_ unikke-1; 
 > * Og derfor så signere _m_ og send `(m, S + SIGNj(m))` til alle; samt tilføj _m_ til _Vi_
 > 
 
@@ -176,3 +177,18 @@ For at argumentere for **Agreement, så ser vi på runden r hvor korrekte Pi til
 **Hvis r var sidste runde**; vil Pj allerede **have m i Vj**, og hvis der er en **runde mere**, vil **Pj tilføje m til Vj** i den runde, **da S' er valid**.
 
 For **Validity** gælder det; at en S kun kan være valid sålænge B signerede m. Så siden B kun signere m, så vil ingen ærlig P have `V != m`.
+
+## Lower bound results
+
+Det viser sig, at der er et lower bound.
+
+**Hvor Dolev Strong tager n+1 runde af kommunikation, så viser det sig at det er muligt at få resultat efter t+1 runder.**
+
+**I runde t+2**, vil en korrekt Pi modtage en besked med et validt sæt af **t+1 signature S**.
+
+Siden der er t korrupte, er det garanteret S indeholder en signatur fra en korrekt Pj.
+
+Derfor har den Pj også sendt det til alle andre.
+
+Hvorfor alle korrekt efter t+2 runder burde have deres endelige resultat.
+
